2003-05-28 Mariusz Woloszyn
	* ptp.h: two more CANON properties (thanks to Jean-Nicolas Kuttler)
	* ptpcam.c: two more CANON properties (thanks to Jean-Nicolas Kuttler)
2003-05-26 Mariusz Woloszyn
	* ptp.h: added some CANON extension device property codes (thanks
	  goes to Jean-Nicolas Kuttler)
	* ptpcam.c: added support for CANON extension device property codes
	* README: fixed typos
2003-05-24 Mariusz Woloszyn
	* ptpcam.c: fixed bug causing not displaying unknown properties
2003-05-23 Mariusz Woloszyn
	* README: at last (but not least) the great README!!!
	* ptpcam.c: a couple of typos
2003-05-19 Mariusz Woloszyn
	* Makefile.am: reorganized configure to build without ptpcam
	* configure.in: allowed configure --without-ptpcam
	* TODO: new TODO for standalone 1.0 release
2003-05-19 Mariusz Woloszyn
	* Makefile.am: added library versioning (currrent varsion 1.0.0)
	* configure.in: added library versioning (currrent varsion 1.0.0)
	* ptpcam.c: changed displaying of property values
2003-05-15 Mariusz Woloszyn
	* .cvsignore: added _stdint.h to .cvsignore
	* README: reorganized for stand alone release (still lacks ptpcam
	  detailed description)
2003-05-14 Mariusz Woloszyn
	* started stand alone libptp2 1.0dev1; imported into libptp2 cvs;
	  prepared for stand alone distribution (autoconf/automake
	  implemented)
2003-05-14 Mariusz Woloszyn
	* ptpcam.c: changed test_ptp.c to ptpcam.c;
	* Makefile.am: changed test_ptp.c to ptpcam.c;
	* TODO: added the idea of error reporting improvement
	* README: reorganized a bit
2003-05-13 Mariusz Woloszyn
	* ptp-pack.c: ptp_pack_DPV() fixup;
	* ptp.c: reorganized reporting errors, added ptp_perror();
	* ptp.h: added ptp_perror() prototype;
	* test_ptp.c: reorganized reporting errors; added property setting
	  support!
2003-05-12 Mariusz Woloszyn
	* ptp.c: fflush(stderr) on error and debug; 
	  added datatype argument for ptp_getdevicepropvalue();
	  added ptp_setdevicepropvalue();A